--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -2,3 +2,11 @@ body {
   text-align: center;
   margin: 0 auto;
 }
+
+header {
+  margin-top: 100px;
+}
+
+/* .header {
+  background-image: url('./images/cool-background.png');
+} */
