--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,3 +1,18 @@
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+ 
+.wrapper > * {
+  padding: 20px;
+}
+ 
+.page-main {
+  flex-grow: 1;
+}
+
+
 body {
   text-align: center;
   margin: 0 auto;
@@ -7,6 +22,24 @@ header {
   margin-top: 100px;
 }
 
-/* .header {
-  background-image: url('./images/cool-background.png');
-} */
+label .bg-success {
+  background-color: green;
+  color: white;
+}
+
+/* The animation code :
+@keyframes example {
+  0%   {background-color: red;}
+  25%  {background-color: yellow;}
+  50%  {background-color: blue;}
+  100% {background-color: green;}
+}
+
+ The element to apply the animation to:
+ {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  animation-name: example;
+  animation-duration: 4s;
+} */ 
